--- a/Bart_trip_Cleaning.ipynb
+++ b/Bart_trip_Cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "08481fe1",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "38bf85f4",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
        "[5 rows x 56 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "179f8e1b",
    "metadata": {},
    "outputs": [],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "3426e4c9",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "79b2bb4f",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
        "[5 rows x 59 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "77691ff0",
    "metadata": {},
    "outputs": [],
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "2375eb8f",
    "metadata": {},
    "outputs": [],
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "b66e2122",
    "metadata": {},
    "outputs": [],
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "id": "0df4d2dc",
    "metadata": {},
    "outputs": [],
@@ -589,99 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "e9717632",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>Stop_name</th>\n",
-       "      <th>Number of stops</th>\n",
-       "      <th>City</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1998</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2790954.0</td>\n",
-       "      <td>Oakland</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1998</td>\n",
-       "      <td>16</td>\n",
-       "      <td>2046608.0</td>\n",
-       "      <td>San Francisco</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1998</td>\n",
-       "      <td>19</td>\n",
-       "      <td>1873381.0</td>\n",
-       "      <td>Oakland</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1998</td>\n",
-       "      <td>24</td>\n",
-       "      <td>2820975.0</td>\n",
-       "      <td>San Francisco</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1998</td>\n",
-       "      <td>AN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Antioch</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   year Stop_name  Number of stops           City\n",
-       "0  1998        12        2790954.0        Oakland\n",
-       "1  1998        16        2046608.0  San Francisco\n",
-       "2  1998        19        1873381.0        Oakland\n",
-       "3  1998        24        2820975.0  San Francisco\n",
-       "4  1998        AN              0.0        Antioch"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bart_melted_grouped['City'] = bart_melted_grouped['Stop_name'].map(city)\n",
-    "bart_melted_grouped.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "id": "664d0862",
    "metadata": {
     "scrolled": true
@@ -693,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "id": "75e8fb8c",
    "metadata": {},
    "outputs": [],
@@ -703,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "id": "6a941240",
    "metadata": {},
    "outputs": [],
@@ -887,11 +795,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "6bd3ca44",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bart_melted_grouped.to_csv('bart_melted.csv')"
+   ]
   },
   {
    "cell_type": "code",
