--- a/Bart_trip_Cleaning.ipynb
+++ b/Bart_trip_Cleaning.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "08481fe1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from plotnine import ggplot, geom_point, aes, geom_boxplot, theme, theme_bw, annotate, scale_x_continuous, scale_y_continuous, scale_fill_manual, scale_size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "38bf85f4",
    "metadata": {},
    "outputs": [
@@ -205,7 +206,7 @@
        "[5 rows x 56 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "179f8e1b",
    "metadata": {},
    "outputs": [],
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "3426e4c9",
    "metadata": {},
    "outputs": [],
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "79b2bb4f",
    "metadata": {},
    "outputs": [
@@ -430,7 +431,7 @@
        "[5 rows x 59 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "77691ff0",
    "metadata": {},
    "outputs": [],
@@ -451,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "2375eb8f",
    "metadata": {},
    "outputs": [],
@@ -461,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "b66e2122",
    "metadata": {},
    "outputs": [],
@@ -471,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "0df4d2dc",
    "metadata": {},
    "outputs": [],
@@ -529,10 +530,6 @@
     "    \"Berryessa / North San José\": \"San Jose\"\n",
     "}\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "station_mapping = {\n",
     "    \"RM\": \"Richmond\",\n",
     "    \"EN\": \"El Cerrito Del Norte\",\n",
@@ -589,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "664d0862",
    "metadata": {
     "scrolled": true
@@ -601,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "75e8fb8c",
    "metadata": {},
    "outputs": [],
@@ -611,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "6a941240",
    "metadata": {},
    "outputs": [],
@@ -628,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "22dfa1b2",
    "metadata": {},
    "outputs": [
@@ -784,7 +781,7 @@
        "[1350 rows x 5 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,18 +792,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "6bd3ca44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bart_melted_grouped.to_csv('bart_melted.csv')"
+    "#bart_melted_grouped.to_csv('bart_melted.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d579e199",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>table with row headers in column A and column headers in rows 3 through 4 (leading dots indicate sub-parts)</th>\n",
+       "      <th>Unnamed: 1</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>Unnamed: 4</th>\n",
+       "      <th>Unnamed: 5</th>\n",
+       "      <th>Unnamed: 6</th>\n",
+       "      <th>Unnamed: 7</th>\n",
+       "      <th>Unnamed: 8</th>\n",
+       "      <th>Unnamed: 9</th>\n",
+       "      <th>Unnamed: 10</th>\n",
+       "      <th>Unnamed: 11</th>\n",
+       "      <th>Unnamed: 12</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Annual Estimates of the Resident Population fo...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Geographic Area</td>\n",
+       "      <td>April 1, 2010</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Population Estimate (as of July 1)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Census</td>\n",
+       "      <td>Estimates Base</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>California</td>\n",
+       "      <td>37,253,956</td>\n",
+       "      <td>37,254,519</td>\n",
+       "      <td>37,319,502</td>\n",
+       "      <td>37,638,369</td>\n",
+       "      <td>37,948,800</td>\n",
+       "      <td>38,260,787</td>\n",
+       "      <td>38,596,972</td>\n",
+       "      <td>38,918,045</td>\n",
+       "      <td>39,167,117</td>\n",
+       "      <td>39,358,497</td>\n",
+       "      <td>39,461,588</td>\n",
+       "      <td>39,512,223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>.Alameda County, California</td>\n",
+       "      <td>1,510,271</td>\n",
+       "      <td>1,510,258</td>\n",
+       "      <td>1,512,986</td>\n",
+       "      <td>1,530,915</td>\n",
+       "      <td>1,553,764</td>\n",
+       "      <td>1,579,593</td>\n",
+       "      <td>1,607,792</td>\n",
+       "      <td>1,634,538</td>\n",
+       "      <td>1,650,950</td>\n",
+       "      <td>1,660,196</td>\n",
+       "      <td>1,666,756</td>\n",
+       "      <td>1,671,329</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  table with row headers in column A and column headers in rows 3 through 4 (leading dots indicate sub-parts)  \\\n",
+       "0  Annual Estimates of the Resident Population fo...                                                            \n",
+       "1                                    Geographic Area                                                            \n",
+       "2                                                NaN                                                            \n",
+       "3                                         California                                                            \n",
+       "4                        .Alameda County, California                                                            \n",
+       "\n",
+       "      Unnamed: 1      Unnamed: 2                          Unnamed: 3  \\\n",
+       "0            NaN             NaN                                 NaN   \n",
+       "1  April 1, 2010             NaN  Population Estimate (as of July 1)   \n",
+       "2         Census  Estimates Base                                2010   \n",
+       "3     37,253,956      37,254,519                          37,319,502   \n",
+       "4      1,510,271       1,510,258                           1,512,986   \n",
+       "\n",
+       "   Unnamed: 4  Unnamed: 5  Unnamed: 6  Unnamed: 7  Unnamed: 8  Unnamed: 9  \\\n",
+       "0         NaN         NaN         NaN         NaN         NaN         NaN   \n",
+       "1         NaN         NaN         NaN         NaN         NaN         NaN   \n",
+       "2        2011        2012        2013        2014        2015        2016   \n",
+       "3  37,638,369  37,948,800  38,260,787  38,596,972  38,918,045  39,167,117   \n",
+       "4   1,530,915   1,553,764   1,579,593   1,607,792   1,634,538   1,650,950   \n",
+       "\n",
+       "  Unnamed: 10 Unnamed: 11 Unnamed: 12  \n",
+       "0         NaN         NaN         NaN  \n",
+       "1         NaN         NaN         NaN  \n",
+       "2        2017        2018        2019  \n",
+       "3  39,358,497  39,461,588  39,512,223  \n",
+       "4   1,660,196   1,666,756   1,671,329  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twenty = pd.read_csv(\"co-est2019-annres-06.csv\")\n",
+    "twenty.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d579e199",
+   "id": "43013a15",
    "metadata": {},
    "outputs": [],
    "source": []
